<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="default_title">Title</string>
    <string name="default_message_body">message body</string>
    <string name="agree_label">Agree</string>
    <string name="cancel_label">X</string>
    <string name="reject_all_label">Reject All</string>
    <string name="show_options_label">Show Options</string>

    <!--  Exceptions  -->
    <string name="exception_no_internet_connection_text">No Internet connection.</string>
</resources>