<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/native_message_v6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:clickable="true"
        android:focusable="true">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/description_scrollview"
        android:layout_marginBottom="12dp"
        android:gravity="center_vertical"
        android:paddingLeft="12dp"
        android:text="@string/default_title"
        android:textSize="36sp" />

    <ScrollView
        android:id="@+id/description_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_centerInParent="true"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/msg_body_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:text="@string/default_message_body"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/accept_all_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="60dp"
        android:includeFontPadding="true"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/agree_label" />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:paddingLeft="8dp"
        android:text="@string/cancel_label" />

    <Button
        android:id="@+id/reject_all_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="60dp"
        android:includeFontPadding="true"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/reject_all_label" />

    <Button
        android:id="@+id/show_options_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:focusable="true"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/show_options_label" />

</RelativeLayout>
